@@ -1,3 +1,11 @@
+2013-03-20  John Chapman  <John.Chapman@cern.ch>
+	* requires SimuJobTransforms-00-18-62 onwards or
+	SimuJobTransforms-00-18-38-11 onwards.
+	* share/skeleton.MergeHit.py - adapt to use SimuJobTransforms
+	HitsFilePeeker. Specifying a geometryVersion is now optional for
+	Merging_t(r)f.py when merging HITS files.
+	* tagging as PATJobTransforms-00-05-08	
+
 2013-03-12 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Configuration.py
       - Add AddOutputNTUP_FTKIPFile argument definition function
